# practical-dts

./: .gitignore  README.md  cabal.project  shell.nix
demo/: CHANGELOG.md  Main.hs  fast-vectors.cabal
pdts-fin/: CHANGELOG.md  pdts-fin.cabal
pdts-fin/src/Data/Fin/: Lazy.hs  Strict.hs
pdts-fin/src/Data/Fin/Strict/: Internal.hs
pdts-hlist/: CHANGELOG.md  pdts-hlist.cabal
pdts-hlist/src/Data/: HList.hs
pdts-hvector/: CHANGELOG.md  pdts-hvector.cabal
pdts-hvector/src/Data/: HVector.hs
pdts-list/: CHANGELOG.md  pdts-list.cabal
pdts-list/src/Data/List/: Sized.hs
pdts-nat/: CHANGELOG.md  pdts-nat.cabal
pdts-nat/src/Data/: Nat.hs
pdts-nat/src/Data/Singletons/Nat/: Lazy.hs  Strict.hs
pdts-nat/src/Data/Singletons/Nat/Strict/: Internal.hs
pdts-record/: CHANGELOG.md  pdts-record.cabal
pdts-record/src/Data/: Record.hs
pdts-sigma/: CHANGELOG.md  pdts-sigma.cabal
pdts-sigma/src/Data/: Sigma.hs
pdts-string/: CHANGELOG.md  pdts-string.cabal
pdts-string/src/Data/Singletons/: String.hs
pdts-type/: CHANGELOG.md  pdts-type.cabal
pdts-type/src/Data/Singletons/: Types.hs
pdts-vector/: CHANGELOG.md  pdts-vector.cabal
pdts-vector/src/Data/Vector/: Sized.hs
pdts-vector/tests/: Main.hs
sql/: Db.hs  sql.cabal  start_db  stop_db
sql/demo/: Db.hs
sql/src/Sql/: Expr.hs  Parser.hs  Query.hs  Schema.hs
sql/src/Sql/Schema/: Column.hs  Constraint.hs  Table.hs
sql/src/Sql/Schema/Column/: Type.hs
