cabal-version:       2.4

name:                pdts-fin
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
category:            Data
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Data.Fin.Lazy
                     , Data.Fin.Strict
                     , Data.Fin.Strict.Internal
  build-depends:       base ^>=4.12.0.0
                     , pdts-nat
  hs-source-dirs:      src
  default-language:    Haskell2010
