cabal-version:       2.4

name:                pdts-vector
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
category:            Data
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Data.Vector.Sized
  build-depends:       base ^>=4.12.0.0
                     , pdts-fin
                     , pdts-nat
                     , pdts-list
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite pdts-vector-tests
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.12 && <4.13
                     , pdts-fin
                     , pdts-list
                     , pdts-nat
                     , pdts-sigma
                     , pdts-vector
                     , hedgehog
  default-language:    Haskell2010
  hs-source-dirs:      tests
  ghc-options:         -Wall -Werror