cabal-version:       >=1.10

name:                sql
version:             0.1.0.0
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Db
  build-depends:       base >=4.12 && <4.13
                     , pdts-record
                     , pdts-string

                     , attoparsec
                     , bytestring
                     , postgresql-libpq
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror