cabal-version:       >=1.10

name:                sql
version:             0.1.0.0
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Sql.Expr
                     , Sql.Parser
                     , Sql.Query
                     , Sql.Schema
                     , Sql.Schema.Column
                     , Sql.Schema.Column.Type
                     , Sql.Schema.Constraint
                     , Sql.Schema.Table
  build-depends:       base >=4.12 && <4.13
                     , pdts-record
                     , pdts-string

                     , attoparsec
                     , bytestring
                     , postgresql-libpq
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  AllowAmbiguousTypes
                     , ConstraintKinds
                     , DataKinds
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , KindSignatures
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators
                     , UndecidableInstances
  ghc-options:         -Wall -Werror

executable testing
  build-depends:       base >=4.12 && <4.13
                     , sql
                     , attoparsec
                     , bytestring >= 0.10
                     , pdts-record
                     , pdts-string
                     , postgresql-libpq
                     , text
  hs-source-dirs:      demo
  default-language:    Haskell2010
  main-is:             Db.hs
  ghc-options:         -Wall -Werror